fix(PDS-65): fix page-service alignment

--- a/packages/page-layout/src/components/PageServices/styles.module.scss
+++ b/packages/page-layout/src/components/PageServices/styles.module.scss
@@ -6,6 +6,7 @@
   min-width: 100%;
   height: 100%;
   width: fit-content;
+  justify-content: flex-end;
 }
 
 .sidebar {
